k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultstream-api
spec:
  selector:
    app: vaultstream-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
